--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="https://kit.fontawesome.com/22acfaed3e.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
